5월 6일 refactoring 1. html파일 title 수정

--- a/src/main/resources/templates/html/404.html
+++ b/src/main/resources/templates/html/404.html
@@ -20,7 +20,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- Primary Meta Tags -->
-<title>TOPICSATION - 404 Not Found</title>
+<title>404 Not Found</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="title" content="Spaces - 404 Not Found">
 <meta name="author" content="Themesberg">
@@ -87,7 +87,7 @@
         </section>
     </main>
 
-    <!-- Core -->
+<!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
