--- a/src/main/resources/templates/html/Tutor-Detail-View.html
+++ b/src/main/resources/templates/html/Tutor-Detail-View.html
@@ -576,8 +576,7 @@
     </div>
 </footer>
 
-<script src="/js/tutor-detail-view-calendar.js" charset="UTF-8"></script>
-<script type="module" src="/js/move.js" charset="UTF-8"></script>
+
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
@@ -623,6 +622,10 @@
 
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
+
+<!-- TOPICSATION Custom Javascript -->
+<script src="/js/tutor-detail-view-calendar.js" charset="UTF-8"></script>
+<script type="module" src="/js/move.js" charset="UTF-8"></script>
 
 
 </body>
