--- a/src/main/resources/templates/html/dashboard/myPage-admin.html
+++ b/src/main/resources/templates/html/dashboard/myPage-admin.html
@@ -91,7 +91,8 @@
                                     <div class="btn-group dropleft">
                                         <button
                                                 class="btn btn-link dropdown-toggle dropdown-toggle-split mr-2 m-0 p-0"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="toggle-dropdown">
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                id="toggle-dropdown">
                                                 <span class="icon icon-sm">
                                                     <span class="fas fa-ellipsis-h icon-secondary fa-lg"></span>
                                                 </span>
@@ -233,7 +234,7 @@
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
 
-<!--<script type="text/javascript" th:inline="javascript" src="/js/mypage-admin.js"></script>-->
+<!-- TOPICSATION Custom Javascript -->
 <script type="module" src="/js/mypage-admin.js"></script>
 <script type="module" src="/js/move.js"></script>
 </body>
