--- a/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!-- Primary Meta Tags -->
-    <title>MyPage - Tutee</title>
+    <title>MyPage - Course History</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="Spaces - Settings">
     <meta name="author" content="Themesberg">
@@ -32,9 +32,9 @@
     <!-- Main CSS -->
     <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
-    <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-    <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
             crossorigin="anonymous"></script>
 </head>
 
@@ -69,7 +69,7 @@
                             </div>
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="name"></h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                 <a id="information" class="d-flex list-group-item list-group-item-action">회원 정보<span
+                                <a id="information" class="d-flex list-group-item list-group-item-action">회원 정보<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
                                 <a id="schedule"
@@ -168,10 +168,6 @@
     </div>
 </footer>
 
-<!-- ajax -->
-<script type="module" src="/js/myPage-tutees_CourseHistory.js" ></script>
-<script type="module" src="/js/move.js" ></script>
-
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
@@ -216,6 +212,11 @@
 
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
+
+<!-- TOPICSATION Custom Javascript -->
+<script type="module" src="/js/myPage-tutees_CourseHistory.js"></script>
+<script type="module" src="/js/move.js"></script>
+
 </body>
 
 </html>
