--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!-- Primary Meta Tags -->
-    <title>MyPage - Tutee</title>
+    <title>MyPage - Schedule</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="Spaces - Settings">
     <meta name="author" content="Themesberg">
@@ -26,9 +26,7 @@
     <!-- Main CSS -->
     <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
-    <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-
-    <!-- Jquery -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
             integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
@@ -48,8 +46,12 @@
 
             </a>
             <div>
-                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button></a>
-                <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button></a>
+                <a href="#">
+                    <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button>
+                </a>
+                <a href="#">
+                    <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button>
+                </a>
             </div>
         </div>
     </nav>
@@ -210,9 +212,6 @@
     </div>
 </footer>
 
-<!-- Validation -->
-<script src="/js/validate-tutee.js"></script>
-
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
@@ -258,10 +257,10 @@
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
 
-<!-- Ajax get data -->
-<script type="module" src="/js/move.js" ></script>
-<script type="module" src="/js/myPage-tutees_Schedule.js" ></script>
-
+<!-- TOPICSATION Custom Javascript -->
+<script src="/js/validate-tutee.js"></script>
+<script type="module" src="/js/move.js"></script>
+<script type="module" src="/js/myPage-tutees_Schedule.js"></script>
 
 </body>
 
