--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!-- Primary Meta Tags -->
-    <title>MyPage - Tutor</title>
+    <title>MyPage - Schedule</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="title" content="Spaces - Settings"/>
     <meta name="author" content="Themesberg"/>
@@ -32,9 +32,7 @@
     <!-- Main CSS -->
     <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
-    <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-
-    <!-- Jquery -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
             integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
             crossorigin="anonymous"></script>
@@ -412,7 +410,8 @@
                                                                 class="btn btn-sm btn-secondary">
                                                             Authenticate
                                                         </button>
-                                                        <button type="button" id="modal-close" class="btn btn-link text-danger ml-auto"
+                                                        <button type="button" id="modal-close"
+                                                                class="btn btn-link text-danger ml-auto"
                                                                 data-dismiss="modal">
                                                             Close
                                                         </button>
@@ -507,8 +506,9 @@
     </div>
 </footer>
 
+<!-- TOPICSATION Custom Javascript -->
 <script src="/js/schedule.js"></script>
-<script type="module" src="/js/move.js" ></script>
+<script type="module" src="/js/move.js"></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
@@ -554,6 +554,10 @@
 
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
+
+
+
+
 </body>
 
 </html>
