--- a/src/main/resources/templates/html/sign-in.html
+++ b/src/main/resources/templates/html/sign-in.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- Primary Meta Tags -->
-  <title>TopicSation - Sign in</title>
+  <title>Sign In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="title" content="Spaces - Sign in" />
   <meta name="author" content="Themesberg" />
