--- a/src/main/resources/templates/html/Email-Token.html
+++ b/src/main/resources/templates/html/Email-Token.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!-- Primary Meta Tags -->
-    <title>TOPICSATION - Email</title>
+    <title>Email Authentication</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="Spaces - Sign up">
     <meta name="author" content="Themesberg">
     <meta name="description"
-        content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg.">
+          content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg.">
     <meta name="keywords"
-        content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme" />
+          content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme"/>
     <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg">
 
     <!-- Fontawesome -->
@@ -32,8 +32,6 @@
     <!-- Main CSS -->
     <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
-    <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
             integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
@@ -41,72 +39,72 @@
 </head>
 
 <body>
-    <main>
-        <!-- Section -->
-        <section class="min-vh-100 d-flex align-items-center section-image overlay-soft-dark py-5 py-lg-0"
-            data-background="/assets/img/form-image.jpg">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12 d-flex align-items-center justify-content-center">
-                        <div class="signin-inner mt-3 mt-lg-0 bg-white shadow-soft border rounded border-light p-4 p-lg-5 w-100 fmxw-500">
-                            <div class="mt-3 mb-3" id="email-auth">
-                                <h4 class="text-center">이메일 인증을 진행하세요</h4>
-                                <button type="button" id="send-btn" class="btn btn-block btn-primary">Email Send</button>
-                            </div>
+<main>
+    <!-- Section -->
+    <section class="min-vh-100 d-flex align-items-center section-image overlay-soft-dark py-5 py-lg-0"
+             data-background="/assets/img/form-image.jpg">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <div class="signin-inner mt-3 mt-lg-0 bg-white shadow-soft border rounded border-light p-4 p-lg-5 w-100 fmxw-500">
+                        <div class="mt-3 mb-3" id="email-auth">
+                            <h4 class="text-center">이메일 인증을 진행하세요</h4>
+                            <button type="button" id="send-btn" class="btn btn-block btn-primary">Email Send</button>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+</main>
 
-    <!-- Email Token Ajax script -->
-    <script src="/js/email.js"></script>
+<!-- Core -->
+<script src="/vendor/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/vendor/headroom.js/dist/headroom.min.js"></script>
+<script src="/vendor/onscreen/dist/on-screen.umd.min.js"></script>
 
-    <!-- Core -->
-    <script src="/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
-    <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/vendor/headroom.js/dist/headroom.min.js"></script>
-    <script src="/vendor/onscreen/dist/on-screen.umd.min.js"></script>
+<!-- NoUISlider -->
+<script src="/vendor/nouislider/distribute/nouislider.min.js"></script>
 
-    <!-- NoUISlider -->
-    <script src="/vendor/nouislider/distribute/nouislider.min.js"></script>
+<!-- Bootstrap Datepicker -->
+<script src="/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
-    <!-- Bootstrap Datepicker -->
-    <script src="/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<!-- jQuery Waypoints -->
+<script src="/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
 
-    <!-- jQuery Waypoints -->
-    <script src="/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
+<!-- Owl acrousel -->
+<script src="/vendor/owl.carousel/dist/owl.carousel.min.js"></script>
 
-    <!-- Owl acrousel -->
-    <script src="/vendor/owl.carousel/dist/owl.carousel.min.js"></script>
+<!-- Smooth scroll -->
+<script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 
-    <!-- Smooth scroll -->
-    <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+<!-- Fancybox -->
+<script src="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.js"></script>
 
-    <!-- Fancybox -->
-    <script src="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.js"></script>
+<!-- Sticky sidebar -->
+<script src="/vendor/sticky-sidebar/dist/sticky-sidebar.min.js"></script>
 
-    <!-- Sticky sidebar -->
-    <script src="/vendor/sticky-sidebar/dist/sticky-sidebar.min.js"></script>
+<!-- Mapbox & Leaflet.js -->
+<script src="/vendor/leaflet/dist/leaflet.js"></script>
 
-    <!-- Mapbox & Leaflet.js -->
-    <script src="/vendor/leaflet/dist/leaflet.js"></script>
+<!-- Chartist -->
+<script src="/vendor/chartist/dist/chartist.min.js"></script>
+<script src="/vendor/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
 
-    <!-- Chartist -->
-    <script src="/vendor/chartist/dist/chartist.min.js"></script>
-    <script src="/vendor/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
+<!-- Vector Maps -->
+<script src="/vendor/jqvmap/dist/jquery.vmap.min.js"></script>
+<script src="/vendor/jqvmap/dist/maps/jquery.vmap.usa.js"></script>
 
-    <!-- Vector Maps -->
-    <script src="/vendor/jqvmap/dist/jquery.vmap.min.js"></script>
-    <script src="/vendor/jqvmap/dist/maps/jquery.vmap.usa.js"></script>
+<!-- Sliderform -->
+<script src="/js/jquery.slideform.js"></script>
 
-    <!-- Sliderform -->
-    <script src="/js/jquery.slideform.js"></script>
+<!-- Spaces custom Javascript -->
+<script src="/js/spaces.js"></script>
 
-    <!-- Spaces custom Javascript -->
-    <script src="/js/spaces.js"></script>
+<!-- TOPICSATION Custom Javascript -->
+<script src="/js/email.js"></script>
 </body>
 
 </html>
