--- a/src/main/resources/templates/html/sign-up-success.html
+++ b/src/main/resources/templates/html/sign-up-success.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- Primary Meta Tags -->
-  <title>Sign up - Success</title>
+  <title>Sign Up - Success</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="title" content="Spaces - Directory Listing Landing page 3">
   <meta name="author" content="Themesberg">
