--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -2,146 +2,141 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <!-- Primary Meta Tags -->
-  <title>TOPICSATION - Find</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="title" content="Spaces - Sign up" />
-  <meta name="author" content="Themesberg" />
-  <meta name="description"
-        content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg." />
-  <meta name="keywords"
-        content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme" />
-  <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <!-- Primary Meta Tags -->
+    <title>TOPICSATION - Find</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="title" content="Spaces - Sign up"/>
+    <meta name="author" content="Themesberg"/>
+    <meta name="description"
+          content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg."/>
+    <meta name="keywords"
+          content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme"/>
+    <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg"/>
 
-  <!-- Fontawesome -->
-  <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
-          integrity="sha512-Cvxz1E4gCrYKQfz6Ne+VoDiiLrbFBvc6BPh4iyKo2/ICdIodfgc5Q9cBjRivfQNUXBCEnQWcEInSXsvlNHY/ZQ=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Fontawesome -->
+    <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
+            integrity="sha512-Cvxz1E4gCrYKQfz6Ne+VoDiiLrbFBvc6BPh4iyKo2/ICdIodfgc5Q9cBjRivfQNUXBCEnQWcEInSXsvlNHY/ZQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <!-- Leaflet JS -->
-  <link type="text/css" href="/vendor/leaflet/dist/leaflet.css" rel="stylesheet">
+    <!-- Leaflet JS -->
+    <link type="text/css" href="/vendor/leaflet/dist/leaflet.css" rel="stylesheet">
 
-  <!-- Fancybox -->
-  <link rel="stylesheet" href="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.css">
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.css">
 
-  <!-- VectorMap -->
-  <link rel="stylesheet" href="/vendor/jqvmap/dist/jqvmap.min.css">
+    <!-- VectorMap -->
+    <link rel="stylesheet" href="/vendor/jqvmap/dist/jqvmap.min.css">
 
-  <!-- Main CSS -->
-  <link type="text/css" href="/css/spaces.css" rel="stylesheet">
+    <!-- Main CSS -->
+    <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
-  <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-
-  <!-- Jquery -->
-  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-          crossorigin="anonymous"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <main>
+<main>
     <!-- Section -->
-    <section class="min-vh-100 d-flex align-items-center section-image overlay-soft-dark py-5 py-lg-0"
-      data-background="/assets/img/form-image.jpg">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12">
-            <div class="text-center text-md-center mb-5 mt-md-0 text-white">
-              <h1 class="mb-0 h3">Forgot your password?</h1>
-            </div>
-          </div>
-          <div class="col-12 d-flex align-items-center justify-content-center">
-            <div
-              class="signin-inner mt-3 mt-lg-0 bg-white shadow-soft border rounded border-light p-4 p-lg-5 w-100 fmxw-500">
-              <form action="#">
-                <!-- Form -->
-                <div class="form-group">
-                  <label for="email">Your email<span class="txt-error email"
-                    style="padding-left:10px; font-size:13px;"></span>
-                  </label>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><span class="fas fa-envelope"></span></span>
+    <section class="min-vh-100 d-flex align-items-center section-image overlay-soft-dark py-5 py-lg-0" data-background="/assets/img/form-image.jpg">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="text-center text-md-center mb-5 mt-md-0 text-white">
+                        <h1 class="mb-0 h3">Forgot your password?</h1>
                     </div>
-                    <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email adress" autocomplete="off"
-                    required />
-                  </div>
-                  <div>
-                  <span id="emailCheck" class="small mb-3" style="float:left; font-weight: bold"></span>
-                  </div>
                 </div>
-                <!-- End of Form -->
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <div class="signin-inner mt-3 mt-lg-0 bg-white shadow-soft border rounded border-light p-4 p-lg-5 w-100 fmxw-500">
+                        <form action="#">
+                            <!-- Form -->
+                            <div class="form-group">
+                                <label for="email">Your email<span class="txt-error email" style="padding-left:10px; font-size:13px;"></span>
+                                </label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><span class="fas fa-envelope"></span></span>
+                                    </div>
+                                    <input class="form-control" id="email" placeholder="@E-mail" type="text"
+                                           aria-label="email adress" autocomplete="off" required/>
+                                </div>
+                                <div>
+                                    <span id="emailCheck" class="small mb-3" style="float:left; font-weight: bold"></span>
+                                </div>
+                            </div>
+                            <!-- End of Form -->
 
-                <button type="submit" class="btn btn-block btn-primary" id="send-reset-password">
-                  Send reset password link
-                </button>
-                <div class="form-group">
-                  <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
-                    <span class="font-weight-normal">
-                      Go back to the
-                      <a href="/members/signin" class="font-weight-bold">login page</a>
-                    </span>
-                  </div>
+                            <button type="submit" class="btn btn-block btn-primary" id="send-reset-password">
+                                Send reset password link
+                            </button>
+                            <div class="form-group">
+                                <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
+                                    <span class="font-weight-normal">
+                                      Go back to the
+                                      <a href="/members/signin" class="font-weight-bold">login page</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-              </form>
             </div>
-          </div>
         </div>
-      </div>
     </section>
-  </main>
+</main>
 
-  <!-- Validation -->
-  <script src="/js/validate-tutor.js"></script>
+<!-- Core -->
+<script src="/vendor/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/vendor/headroom.js/dist/headroom.min.js"></script>
+<script src="/vendor/onscreen/dist/on-screen.umd.min.js"></script>
 
-  <!-- ajax -->
-  <script src="/js/password-find.js"></script>
+<!-- NoUISlider -->
+<script src="/vendor/nouislider/distribute/nouislider.min.js"></script>
 
-  <!-- Core -->
-  <script src="/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
-  <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/vendor/headroom.js/dist/headroom.min.js"></script>
-  <script src="/vendor/onscreen/dist/on-screen.umd.min.js"></script>
+<!-- Bootstrap Datepicker -->
+<script src="/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
-  <!-- NoUISlider -->
-  <script src="/vendor/nouislider/distribute/nouislider.min.js"></script>
+<!-- jQuery Waypoints -->
+<script src="/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
 
-  <!-- Bootstrap Datepicker -->
-  <script src="/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<!-- Owl acrousel -->
+<script src="/vendor/owl.carousel/dist/owl.carousel.min.js"></script>
 
-  <!-- jQuery Waypoints -->
-  <script src="/vendor/waypoints/lib/jquery.waypoints.min.js"></script>
+<!-- Smooth scroll -->
+<script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 
-  <!-- Owl acrousel -->
-  <script src="/vendor/owl.carousel/dist/owl.carousel.min.js"></script>
+<!-- Fancybox -->
+<script src="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.js"></script>
 
-  <!-- Smooth scroll -->
-  <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+<!-- Sticky sidebar -->
+<script src="/vendor/sticky-sidebar/dist/sticky-sidebar.min.js"></script>
 
-  <!-- Fancybox -->
-  <script src="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.js"></script>
+<!-- Mapbox & Leaflet.js -->
+<script src="/vendor/leaflet/dist/leaflet.js"></script>
 
-  <!-- Sticky sidebar -->
-  <script src="/vendor/sticky-sidebar/dist/sticky-sidebar.min.js"></script>
+<!-- Chartist -->
+<script src="/vendor/chartist/dist/chartist.min.js"></script>
+<script src="/vendor/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
 
-  <!-- Mapbox & Leaflet.js -->
-  <script src="/vendor/leaflet/dist/leaflet.js"></script>
+<!-- Vector Maps -->
+<script src="/vendor/jqvmap/dist/jquery.vmap.min.js"></script>
+<script src="/vendor/jqvmap/dist/maps/jquery.vmap.usa.js"></script>
 
-  <!-- Chartist -->
-  <script src="/vendor/chartist/dist/chartist.min.js"></script>
-  <script src="/vendor/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
+<!-- Sliderform -->
+<script src="/js/jquery.slideform.js"></script>
 
-  <!-- Vector Maps -->
-  <script src="/vendor/jqvmap/dist/jquery.vmap.min.js"></script>
-  <script src="/vendor/jqvmap/dist/maps/jquery.vmap.usa.js"></script>
+<!-- Spaces custom Javascript -->
+<script src="/js/spaces.js"></script>
 
-  <!-- Sliderform -->
-  <script src="/js/jquery.slideform.js"></script>
+<!-- TOPICSATION custom Javascript -->
+<script src="/js/validate-tutor.js"></script>
+<script src="/js/password-find.js"></script>
 
-  <!-- Spaces custom Javascript -->
-  <script src="/js/spaces.js"></script>
 
 </body>
 
