--- a/src/main/resources/templates/html/sign-up-tutor.html
+++ b/src/main/resources/templates/html/sign-up-tutor.html
@@ -2,25 +2,26 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <!-- Primary Meta Tags -->
   <title>TOPICSATION - Sign up Tutor</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="title" content="Spaces - Sign up" />
-  <meta name="author" content="Themesberg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta name="title" content="Spaces - Sign up"/>
+  <meta name="author" content="Themesberg"/>
   <meta name="description"
-    content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg." />
+    content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg."/>
   <meta name="keywords"
-    content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme" />
-  <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg" />
+    content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme"/>
+  <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg"/>
 
   <!-- Fontawesome -->
-  <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
+  <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
           integrity="sha512-Cvxz1E4gCrYKQfz6Ne+VoDiiLrbFBvc6BPh4iyKo2/ICdIodfgc5Q9cBjRivfQNUXBCEnQWcEInSXsvlNHY/ZQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- Leaflet JS -->
-  <link type="text/css" href="/vendor/leaflet/dist/leaflet.css" rel="stylesheet" />
+  <link type="text/css" href="/vendor/leaflet/dist/leaflet.css" rel="stylesheet"/>
 
   <!-- Fancybox -->
   <link rel="stylesheet" href="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.css" />
@@ -31,22 +32,13 @@
   <!-- Main CSS -->
   <link type="text/css" href="/css/spaces.css" rel="stylesheet" />
 
-  <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-
-  <!-- Jquery -->
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
     crossorigin="anonymous"></script>
 </head>
 
 <body>
   <main>
-    <!-- <div class="preloader bg-dark flex-column justify-content-center align-items-center">
-    <div class="position-relative">
-        <img src="../assets/img/brand/light-without-letter.svg" alt="Logo loader">
-        <img src="../assets/img/brand/letter.svg" class="rotate-letter" alt="Letter loader">
-    </div>
-</div> -->
-
     <!-- Section -->
     <section class="min-vh-100 d-flex align-items-center section-image overlay-soft-dark py-5 py-lg-0"
       data-background="/assets/img/form-image.jpg">
@@ -132,7 +124,7 @@
                       </label>
                     </div>
 
-                    <!-- End of Radio -->
+                  <!-- End of Radio -->
                   </div>
                   <div class="form-group">
                     <label>Nationality</label>
@@ -176,12 +168,12 @@
                   <div class="form-group">
                     <label>Files Required for Authentication</label>
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="customFile" accept=".pdf" name="customFile" required />
+                      <input type="file" class="custom-file-input" id="customFile" accept=".pdf" name="customFile" required/>
                       <label class="custom-file-label" id="show-files" for="customFile">Choose file</label>
                     </div>
                   </div>
                   <div class="form-check mb-4">
-                    <input class="form-check-input" type="checkbox" value="" id="terms" required />
+                    <input class="form-check-input" type="checkbox" value="" id="terms" required/>
                     <label class="form-check-label" for="terms">
                       <span class="small">I agree to the
                         <a class="text-secondary" href="./terms.html">terms and conditions</a></span>
@@ -206,10 +198,6 @@
       </div>
     </section>
   </main>
-
-  <!-- Validation -->
-<!--  <script src="/js/validate-tutor.js"></script>-->
-  <script src="/js/signup-tutor.js"></script>
 
   <!-- Core -->
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
@@ -256,6 +244,8 @@
   <!-- Spaces custom Javascript -->
   <script src="/js/spaces.js"></script>
 
+  <!-- TOPICSATION custom Javascript -->
+  <script src="/js/signup-tutor.js"></script>
 
 </body>
 
