--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -67,14 +67,14 @@
                             <div class="profile-thumbnail small-thumbnail mx-auto">
                                 <input type="file" id="file" name="file"
                                        style="display: none" accept="image/png, image/jpeg, image/jpg"/>
-                                <button type="button" id="profileImgButton" class="btn btn-sm p-0"
+                                <button type="button" id="profileImgButton" class="btn btn-sm p-2"
                                         data-toggle="tooltip" data-placement="top" title="Edit Profile">
-                                    <img src="/assets/img/team/profile-picture-4.jpg"
+                                    <img src=""
                                          class="card-img-top rounded-circle border-white" id="profile-img"
                                          alt="Joseph Portrait"/>
                                 </button>
                             </div>
-                            <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutor-name">Neil Sims</h2>
+                            <h2 class="h5 font-weight-normal text-center mt-5 mb-0" id="tutor-name">Neil Sims</h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
                                 <a href="#" id="information"
                                    class="d-flex list-group-item list-group-item-action  active">Information<span
