--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
@@ -68,9 +68,9 @@
                     <!-- Navigation -->
                     <div class="card border-light p-2">
                         <div class="card-body p-2">
-                            <div class="profile-thumbnail small-thumbnail mx-auto" id="tutor-img">
+                            <div class="profile-thumbnail small-thumbnail mx-auto p-2" id="tutor-img">
                             </div>
-                            <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutor-name">
+                            <h2 class="h5 font-weight-normal text-center mt-5 mb-0" id="tutor-name">
                             </h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
                                 <a href="#" id="information"
