5월 8일 예외처리

--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -20,7 +20,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- Primary Meta Tags -->
-<title>401 Unauthorized</title>
+<title>400 Bad Request</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="title" content="Spaces - 404 Not Found">
 <meta name="author" content="Themesberg">
@@ -78,19 +78,14 @@
                     <div class="col-12 text-center text-dark d-flex align-items-center justify-content-center">
                         <div>
                             <img class="img-fluid w-50" src="../assets/img/illustrations/404.svg" alt="girl illustration">
-                            <h1 class="mt-4">401 <span class="font-weight-bolder text-primary">Unauthorized</span></h1>
-                            <p class="lead my-4 px-lg-11">권한이 부족하여 요청이 완료되지 못했습니다.</p>
+                            <h1 class="mt-4">400 <span class="font-weight-bolder text-primary">Bad Request</span></h1>
+                            <p class="lead my-4 px-lg-11">잘못된 요청입니다.</p>
                             <a class="btn btn-secondary animate-hover" href="/main"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back main</a></div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
-<script>
-    document.cookie = "refreshToken=;  expires=Thu, 01 Jan 1970 00:00:00 UTC ; path=/";
-    sessionStorage.removeItem('accessToken');
-</script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
