5월 8일 예외처리 1. 이미지 경로 수정

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-12 text-center text-dark d-flex align-items-center justify-content-center">
                         <div>
-                            <a href="./../index.html"><img class="img-fluid w-50" src="../assets/img/illustrations/404.svg" alt="girl illustration"></a>
+                            <a href="./../index.html"><img class="img-fluid w-50" src="/assets/img/illustrations/404.svg" alt="girl illustration"></a>
                             <h1 class="mt-4">404 Page <span class="font-weight-bolder text-primary">not found</span></h1>
                             <p class="lead my-4 px-lg-11">요청하신 페이지의 정보가 없습니다. URL을 확인해주세요.</p>
                             <a class="btn btn-secondary animate-hover" href="/main"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back main</a></div>
