--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-12 text-center text-dark d-flex align-items-center justify-content-center">
                         <div>
-                            <img class="img-fluid w-50" src="../assets/img/illustrations/404.svg" alt="girl illustration">
+                            <img class="img-fluid w-50" src="/assets/img/illustrations/404.svg" alt="girl illustration">
                             <h1 class="mt-4">500 Internal <span class="font-weight-bolder text-primary">Server Error</span></h1>
                             <p class="lead my-4 px-lg-11">서버가 해당 요청을 수행하던 요청을 처리하던 중,<br> 예상치 못한 에러가 발생했습니다.</p>
                             <a class="btn btn-secondary animate-hover" href="/main"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back main</a></div>
