--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-12 text-center text-dark d-flex align-items-center justify-content-center">
                         <div>
-                            <img class="img-fluid w-50" src="../assets/img/illustrations/404.svg" alt="girl illustration">
+                            <img class="img-fluid w-50" src="/assets/img/illustrations/404.svg" alt="girl illustration">
                             <h1 class="mt-4">400 <span class="font-weight-bolder text-primary">Bad Request</span></h1>
                             <p class="lead my-4 px-lg-11">잘못된 요청입니다.</p>
                             <a class="btn btn-secondary animate-hover" href="/main"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back main</a></div>
